# aether-launcher

./: .gitignore  accounts.json  appimage_logs.txt  index.html  launcher_profiles.json  package-lock.json  package.json  tauri_dev_logs.txt  vite.config.ts
.aether-launcher/: launcher_profiles.json
.aether-launcher/assets/indexes/: .gitkeep
.aether-launcher/resourcepacks/: .gitkeep
.aether-launcher/saves/: .gitkeep
.aether-launcher/versions/: .gitkeep
.github/workflows/: build-arch.yml  build-linux.yml  build-windows.yml
.minecraft/: options.txt
.minecraft/assets/objects/: .gitkeep
.minecraft/crash-reports/: .gitkeep
.minecraft/libraries/: .gitkeep
.minecraft/mods/: .gitkeep
.minecraft/runtime/: .gitkeep
.minecraft/saves/: .gitkeep
.minecraft/screenshots/: .gitkeep
.minecraft/shaderpacks/: .gitkeep
assets/indexes/: .gitkeep
config/: .gitkeep
scripts/: build-arch-pkg.sh  forge_installer.py
src/: App.css  App.tsx  ErrorBoundary.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  auto_update.rs  downloader.rs  installer.rs  launcher.rs  main.rs  mods.rs
src/components/: Button.tsx  Checkbox.tsx  ForgeInstaller.tsx  GlassCard.tsx  GlassPanel.tsx  Icons.tsx  Input.tsx  LaunchButton.tsx  ModManager.tsx  Navigation.tsx  TitleBar.tsx  VersionSelector.tsx
src/pages/: Auth.tsx  Dashboard.tsx  Library.tsx  Settings.tsx
versions/1.7.10/: 1.7.10.json
versions/1.8.9/: 1.8.9.json
(+8 files in other folders)
