[package]
name = "aether-launcher"
version = "0.1.0"
description = "Aether Launcher - Modular and Scalable Desktop Launcher"
authors = ["Aether Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-window-state = "2"
window-vibrancy = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "process", "net", "time"] }
zip = "2.2.0"
self_update = { version = "0.44.0", features = ["rustls"] }
self-replace = "1.5.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
